--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,9 +14,17 @@ h1, h2, h3, h4 {
 	font-family: 'Vollkorn', serif;
 	font-weight: bold;
 }
+h1 {
+	padding: 10px 0;
+	border-bottom: 1px solid #ccc;
+}
 p {
 	font-size: 16px;
 	line-height: 1.6;
+}
+
+thead {
+	background: #f2d5d3;
 }
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
@@ -49,6 +57,10 @@ a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {border: 1px solid #337
 }
 .navbar-default .navbar-toggle .icon-bar {
 	background: #fff;
+}
+.sidebar {
+	background: #f2d5d3;
+	border: 1px solid #c64d44;
 }
 
 a {
